feat: add link to the course

--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
             </li>
         </ul>
         <hr>
-        <h3>7. English language:</h3>
+        <h2>7. English language:</h2>
         <ul>
             <li>Level A2</li>
         </ul>
+        <footer class="footer top">
+            <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/codejam-cv.md">
+                Created for task of app.rs.school
+            </a>
+        </footer>
     </div>
 
 </body>
