--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <ul>
             <li>Level A2</li>
         </ul>
+        <footer class="footer top">
+            <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/codejam-cv.md">
+                Created for task of app.rs.school    </a>
+        </footer>
     </div>
 
 </body>
